Performance improvements
- Use Hibernate lazy loading
- Add missing @Transactional annotations
- Use @Cacheable instead of in-memory cache
- Remove WebResources from `/vscode/gallery/extensionquery` response, related to #456
- Get file URLs in bulk
- Added ehcache
- Fix /vscode/unpkg endpoint